--- a/android/app/src/dev/res/values/colors.xml
+++ b/android/app/src/dev/res/values/colors.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="ic_launcher_background">#FC3737</color>
+    <color name="ic_launcher_background">#00C2FF</color>
 </resources>
